--- a/index.html
+++ b/index.html
@@ -448,22 +448,28 @@
                     <div class="marquee">
 
                         <div class="text-center text-black p-2">
+                            <img class="mb-3 w-75" src="assets/images/placement-companys/Oracle-Academy.jpg" alt="">
+                        </div>
+                        <div class="text-center text-black p-2">
+                            <img class="mb-3 w-50" src="assets/images/placement-companys/RH_Academy.jpg" alt="">
+                        </div>
+                        <div class="text-center text-black p-2">
                             <img class="mb-3 w-100" src="assets/images/placement-companys/omega-logo.svg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
                             <img class="mb-3 w-100" src="assets/images/placement-companys/tvs-lucas-logo.png" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-50" src="assets/images/placement-companys/ZF_logo.svg" alt="">
+                            <img class="mb-3" width="100%" src="assets/images/placement-companys/ZF_logo.svg" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-100" src="assets/images/placement-companys/Knacktech-logo.png" alt="">
+                            <img class="mb-3" width="100%" src="assets/images/placement-companys/Knacktech-logo.png" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-100" src="assets/images/placement-companys/qspiders_logo.png" alt="">
+                            <img class="mb-3" width="100%" src="assets/images/placement-companys/qspiders_logo.png" alt="">
                         </div>
                         <div class="text-center text-black p-2">
-                            <img class="mb-3 w-100" src="assets/images/placement-companys/tap-logo.svg" alt="">
+                            <img class="mb-3" width="100%" src="assets/images/placement-companys/tap-logo.svg" alt="">
                         </div>
 
 
